# murder-mystery-ai-workflow

./: .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD-murder-wizard-Pro.md  README.md  REVIEW.md  TODOS.md  WEB_DASHBOARD_PLAN.md  discovery_plan.md  interview_script.md  metrics_dashboard.md  metrics_plan.md  pricing_strategy.md  pyproject.toml  recruitment_plan.md  requirements.txt  setup.py
docs/: 00_项目概览.md  01_机制设计.md  02_剧本创作.md  03_视觉物料.md  04_用户测试.md  04_项目时间线.md  05_商业化.md  06_印刷生产.md  07_宣发内容.md  08_社区运营.md  09_项目管理.md  expand-spec.md  murder-wizard-design.md
logs/: README.md
murder_wizard/: __init__.py  api  cli.py  core  generator.py  phase_runner.py  state.py
murder_wizard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
murder_wizard/assets/: __init__.py  jimeng.py  vidu.py
murder_wizard/cli/: __init__.py  commands.py  phase_runner.py  wizard_tui.py
murder_wizard/llm/: __init__.py  cache.py  client.py  rate_limit.py
murder_wizard/print/: pdf_gen.py
murder_wizard/prompts/: 00_guided_questionnaire.md  01_emotion_design.md  01_emotion_mechanism.md  01_fun_design.md  01_fun_mechanism.md  01_horror_design.md  01_horror_mechanism.md  01_mechanic_mechanism.md  01_mechanism_design.md  01_reasoning_design.md  01_reasoning_mechanism.md  02_emotion_script.md  02_fun_script.md  02_horror_script.md  02_mechanic_script.md  02_reasoning_script.md  02_script_generation.md  03_emotion_images.md  03_fun_images.md  03_horror_images.md  03_mechanic_images.md  03_reasoning_images.md  04_consistency_check.md  04_emotion_testing.md  04_fun_testing.md  04_horror_testing.md  04_mechanic_testing.md  04_reasoning_testing.md  05_emotion_marketing.md  05_fun_marketing.md  05_horror_marketing.md  05_mechanic_marketing.md  05_reasoning_marketing.md  (+3 more)
murder_wizard_web/: Dockerfile.backend  README.md  docker-compose.yml  start.sh
prompts/: 01_mechanism_design.md  02_script_generation.md  03_visual_materials.md  04_consistency_check.md  FRAMEWORK.md  剧本生成_旧版.md.bak  宣发文案.md  机制研究.md  穿帮检测.md
templates/: 信息矩阵表.md  宣发排期表.md  成本核算表.md  游戏大纲模板.md  用户测试报告.md  社区运营记录.md  角色模板.md  项目执行清单.md
tests/: conftest.py  test_api_integration.py  test_commands.py  test_expand_types.py  test_llm_cache.py  test_llm_client.py  test_prompt_loader.py  test_rate_limit.py  test_session.py  test_state_machine.py  test_truth_files.py
(+63 files in other folders)
