[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murder-wizard"
version = "0.1.0"
description = "CLI wizard for 剧本杀 creation workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "reportlab>=4.0.0",
]

[project.scripts]
murder-wizard = "murder_wizard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["murder_wizard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
